wiki information api (wip)

--- a/app/src/main/res/layout/information_album_form.xml
+++ b/app/src/main/res/layout/information_album_form.xml
@@ -1,5 +1,6 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -56,38 +57,96 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <TextView
-                android:id="@+id/artist_name"
-                android:layout_width="match_parent"
+                android:id="@+id/author_text_view"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:lineSpacingExtra="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:maxLines="2"
-                android:padding="@dimen/activity_horizontal_margin"
                 android:singleLine="false"
-                android:text="album_name"
-                android:textColor="@color/grey"
-                android:textSize="16sp" />
+                android:text="Author"
+                android:textColor="@color/colorAccent"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/information"
+                android:id="@+id/author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginEnd="8dp"
+                android:singleLine="false"
+                android:text="Author"
+                android:textColor="@color/w"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/author_text_view"
+                app:layout_constraintTop_toTopOf="@+id/author_text_view" />
+
+            <TextView
+                android:id="@+id/release_date_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:maxLines="2"
                 android:singleLine="false"
-                android:text="album_name"
-                android:textColor="@color/grey"
+                android:text="Release date"
+                android:textColor="@color/colorAccent"
                 android:textSize="24sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </LinearLayout>
+                app:layout_constraintStart_toStartOf="@+id/author_text_view"
+                app:layout_constraintTop_toBottomOf="@+id/author" />
+
+            <TextView
+                android:id="@+id/release_date"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:singleLine="false"
+                android:text="release_date"
+                android:textColor="@color/w"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/author"
+                app:layout_constraintTop_toTopOf="@+id/release_date_text_view" />
+
+            <TextView
+                android:id="@+id/price_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:maxLines="2"
+                android:singleLine="false"
+                android:text="Price"
+                android:textColor="@color/colorAccent"
+                android:textSize="24sp"
+                app:layout_constraintStart_toStartOf="@+id/author_text_view"
+                app:layout_constraintTop_toBottomOf="@+id/release_date" />
+
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:singleLine="false"
+                android:text="Price"
+                android:textColor="@color/w"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/release_date"
+                app:layout_constraintTop_toTopOf="@+id/price_text_view" />
+
+
+        </android.support.constraint.ConstraintLayout>
 
 
     </android.support.v4.widget.NestedScrollView>
