--- a/app/src/main/res/layout/information_album_form.xml
+++ b/app/src/main/res/layout/information_album_form.xml
@@ -81,9 +81,9 @@
 
             <TextView
                 android:id="@+id/author"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="64dp"
                 android:layout_marginEnd="8dp"
                 android:singleLine="false"
                 android:text="@string/author"
