--- a/app/src/main/res/layout/my_tabs_fragment.xml
+++ b/app/src/main/res/layout/my_tabs_fragment.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="vertical"
-    android:text="@string/no_data_available"
     android:clipToPadding="false"
     android:paddingBottom="50dp"
-    android:id="@+id/recycler_view">
+    android:scrollbars="vertical"
+    android:text="@string/no_data_available">
 </android.support.v7.widget.RecyclerView>
