Redesign  - add custom item decorator  - click animation

--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -8,6 +8,6 @@
     </stroke>
     <gradient
         android:startColor="#d8e2d4d4"
-        android:endColor="@color/reds">
+        android:endColor="@color/click_accent">
     </gradient>
 </shape>
