--- a/app/src/main/res/layout/album_form_for_artist.xml
+++ b/app/src/main/res/layout/album_form_for_artist.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv"
-    android:background="@color/transparent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:layout_marginTop="4dp"
+    android:background="@color/cardview_dark_background"
     android:layout_marginBottom="4dp">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/transparent"
+        android:background="@drawable/custom_ripple_effect_after_21"
         >
 
         <ImageView
@@ -42,7 +42,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:theme="@style/AppTheme.WhiteAccent"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/album_image"
