--- a/app/src/main/res/layout/information_artist_form.xml
+++ b/app/src/main/res/layout/information_artist_form.xml
@@ -56,6 +56,7 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.constraint.ConstraintLayout
@@ -73,7 +74,6 @@
                 android:maxLines="2"
                 android:singleLine="false"
                 android:text="@string/author"
-                android:textColor="@color/colorAccent"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +102,6 @@
                 android:maxLines="2"
                 android:singleLine="false"
                 android:text="@string/release_date"
-                android:textColor="@color/colorAccent"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/author_text_view"
                 app:layout_constraintTop_toBottomOf="@+id/information" />
@@ -129,7 +128,6 @@
                 android:maxLines="2"
                 android:singleLine="false"
                 android:text="@string/price"
-                android:textColor="@color/colorAccent"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/author_text_view"
                 app:layout_constraintTop_toBottomOf="@+id/release_date" />
@@ -195,6 +193,7 @@
                 android:clipToPadding="false"
                 android:paddingBottom="50dp"
                 android:scrollbars="vertical"
+                android:background="@color/transparent"
                 android:text="@string/no_data_available"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 app:layout_constraintEnd_toEndOf="@+id/author"
