--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,7 +34,7 @@
     </style>
 
     <style name="AppTheme.WhiteAccent">
-        <item name="colorAccent">@color/colorAccent</item> <!-- Whatever color you want-->
+        <item name="colorAccent">@color/click_accent</item> <!-- Whatever color you want-->
     </style>
 
     <style name="MySearchViewStyle" parent="Widget.AppCompat.SearchView">
