--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
                 android:layout_height="8dp"
                 android:layout_marginTop="2dp"
                 android:indeterminate="true"
+                android:visibility="gone"
                 android:indeterminateTint="@color/click_accent"
                 android:progress="30" />
 
