--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
             android:id="@+id/framlytt"
             android:layout_width="match_parent"
             android:layout_height="9dp"
+            android:background="@color/transparent"
             android:layout_marginTop="-4dp">
 
             <ProgressBar
