--- a/app/src/main/res/layout/information_album_form.xml
+++ b/app/src/main/res/layout/information_album_form.xml
@@ -72,7 +72,7 @@
                 android:maxLines="2"
                 android:singleLine="false"
                 android:text="@string/author"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/separator_gray"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -84,10 +84,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="64dp"
                 android:singleLine="false"
                 android:text="@string/author"
-                android:textColor="@color/w"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/author_text_view"
@@ -101,7 +100,7 @@
                 android:maxLines="2"
                 android:singleLine="false"
                 android:text="@string/release_date"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/separator_gray"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/author_text_view"
                 app:layout_constraintTop_toBottomOf="@+id/information" />
@@ -113,7 +112,6 @@
                 android:layout_marginEnd="8dp"
                 android:singleLine="false"
                 android:text="@string/release_date"
-                android:textColor="@color/w"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -128,7 +126,7 @@
                 android:maxLines="2"
                 android:singleLine="false"
                 android:text="@string/price"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/separator_gray"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/author_text_view"
                 app:layout_constraintTop_toBottomOf="@+id/release_date" />
@@ -140,7 +138,6 @@
                 android:layout_marginEnd="8dp"
                 android:singleLine="false"
                 android:text="@string/price"
-                android:textColor="@color/w"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/release_date"
@@ -154,7 +151,7 @@
                 android:maxLines="2"
                 android:singleLine="false"
                 android:text="@string/information"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/separator_gray"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/author_text_view"
                 app:layout_constraintTop_toBottomOf="@+id/author" />
@@ -165,7 +162,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:singleLine="false"
-                android:textColor="@color/w"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -180,7 +176,7 @@
                 android:maxLines="2"
                 android:singleLine="false"
                 android:text="@string/songs"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/separator_gray"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/price_text_view"
                 app:layout_constraintTop_toBottomOf="@+id/price" />
@@ -192,7 +188,6 @@
                 android:layout_marginEnd="8dp"
                 android:singleLine="false"
                 android:text="@string/songs"
-                android:textColor="@color/w"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/price"
