--- a/app/src/main/res/layout/information_artist_form.xml
+++ b/app/src/main/res/layout/information_artist_form.xml
@@ -56,7 +56,7 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorAccent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.constraint.ConstraintLayout
@@ -74,6 +74,7 @@
                 android:maxLines="2"
                 android:singleLine="false"
                 android:text="@string/author"
+                android:textColor="@color/separator_gray"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +89,7 @@
                 android:layout_marginEnd="8dp"
                 android:singleLine="false"
                 android:text="@string/author"
-                android:textColor="@color/w"
+
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/author_text_view"
@@ -101,6 +102,7 @@
                 android:layout_marginTop="8dp"
                 android:maxLines="2"
                 android:singleLine="false"
+                android:textColor="@color/separator_gray"
                 android:text="@string/release_date"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/author_text_view"
@@ -113,7 +115,6 @@
                 android:layout_marginEnd="8dp"
                 android:singleLine="false"
                 android:text="@string/release_date"
-                android:textColor="@color/w"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -127,6 +128,7 @@
                 android:layout_marginTop="8dp"
                 android:maxLines="2"
                 android:singleLine="false"
+                android:textColor="@color/separator_gray"
                 android:text="@string/price"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/author_text_view"
@@ -139,7 +141,6 @@
                 android:layout_marginEnd="8dp"
                 android:singleLine="false"
                 android:text="@string/price"
-                android:textColor="@color/w"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/release_date"
@@ -153,7 +154,7 @@
                 android:maxLines="2"
                 android:singleLine="false"
                 android:text="@string/information"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/separator_gray"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/author_text_view"
                 app:layout_constraintTop_toBottomOf="@+id/author" />
@@ -164,8 +165,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:singleLine="false"
-                android:text="Information"
-                android:textColor="@color/w"
+                android:text="@string/information"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -180,7 +180,7 @@
                 android:maxLines="2"
                 android:singleLine="false"
                 android:text="@string/albums"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/separator_gray"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/price_text_view"
                 app:layout_constraintTop_toBottomOf="@+id/price" />
