--- a/app/src/main/res/layout/album_form_for_artist.xml
+++ b/app/src/main/res/layout/album_form_for_artist.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
     android:layout_marginTop="4dp"
-    android:background="@color/cardview_dark_background"
-    android:layout_marginBottom="4dp">
+    android:layout_marginRight="4dp"
+    android:layout_marginBottom="4dp"
+    android:background="@color/cardview_dark_background">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/custom_ripple_effect_after_21"
-        >
+        android:background="@drawable/custom_ripple_effect_after_21">
 
         <ImageView
             android:id="@+id/album_image"
