--- a/app/src/main/res/layout/song_card_form.xml
+++ b/app/src/main/res/layout/song_card_form.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv"
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
     android:layout_marginTop="4dp"
+    android:layout_marginRight="4dp"
     android:layout_marginBottom="4dp">
 
     <android.support.constraint.ConstraintLayout
@@ -21,8 +20,8 @@
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
+            android:contentDescription="@string/songs"
             android:scaleType="fitXY"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -60,7 +59,7 @@
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:singleLine="false"
-                android:text="song"
+                android:text="@string/songs"
                 android:textColor="@color/w"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +74,7 @@
                 android:layout_marginBottom="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="song_album_name"
+                android:text="@string/albums"
                 android:textColor="@color/separator_gray"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/song_artist_name"
@@ -90,7 +89,7 @@
                 android:layout_marginBottom="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="song_artist"
+                android:text="@string/author"
                 android:textColor="@color/separator_gray"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
