--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        app:layout_behavior="com.nimtego.itunes.presentation.utils.AppBarLayoutBehaviorFix">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/tool_bar"
