--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,10 +23,11 @@
             <android.support.v7.widget.SearchView
                 android:id="@+id/search_edit_text"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="end"
                 android:elevation="2dp"
                 android:gravity="center_vertical"
+                android:background="@drawable/rounded_shape"
                 android:hint="@string/search"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:theme="@style/MySearchViewStyle" />
