--- a/app/src/main/res/layout/activity_main_k.xml
+++ b/app/src/main/res/layout/activity_main_k.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.nimtego.plectrum.presentation.ui.MainActivity">
+    tools:context="com.nimtego.plectrum.presentation.migrate_kotlin.ui.MainActivity">
 
     <FrameLayout
         android:id="@+id/status_bar"
