PTR-63 Redesign  add:   - dash board   - dash board interactor

--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -1,69 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/color_bottom_sheet_navigation_bar"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@color/color_vendor_dark_grey_blue_lighter"
+        android:elevation="4dp"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_new_media"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp">
+
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v7.widget.CardView>
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/color_bottom_sheet_navigation_bar">
+        android:background="@color/signupColor">
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:orientation="vertical"
-            android:elevation="4dp"
-            android:background="@color/color_vendor_dark_grey_blue_lighter">
         <LinearLayout
-                android:layout_width="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/click_accent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/confirmation_layout_padding_bottom"
-                android:orientation="horizontal">
+                android:text="Hot" />
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:background="@color/color_default_card_indicator_checked"
+                android:elevation="4dp"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view_hot_media"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp">
+
+                </android.support.v7.widget.RecyclerView>
+            </android.support.v7.widget.CardView>
             <TextView
-                    android:layout_marginStart="@dimen/rounded_edit_text"
-                    android:textColor="@color/edit_text_color"
-                    android:textSize="14sp"
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="!!!!"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Songs" />
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:background="@color/color_default_card_indicator_checked"
+                android:elevation="4dp"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view_top_songs"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp">
+
+                </android.support.v7.widget.RecyclerView>
+            </android.support.v7.widget.CardView>
             <TextView
-                    android:id="@+id/current"
-                    android:textColor="@color/edit_text_color"
-                    android:layout_marginStart="@dimen/rounded_edit_text"
-                    android:layout_width="wrap_content"
-                    android:layout_gravity="center"
-                    android:textSize="16sp"
-                    android:background="@drawable/rounded_shape"
-                    android:layout_height="wrap_content"
-                    android:text="!!!!"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Albums" />
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:background="@color/color_default_card_indicator_checked"
+                android:elevation="4dp"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view_top_albums"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp">
+
+                </android.support.v7.widget.RecyclerView>
+            </android.support.v7.widget.CardView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Video" />
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:background="@color/color_default_card_indicator_checked"
+                android:elevation="4dp"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view_top_video"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp">
+
+                </android.support.v7.widget.RecyclerView>
+            </android.support.v7.widget.CardView>
         </LinearLayout>
-
-    </LinearLayout>
-
-    <ScrollView android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/color_vendor_dark_grey_blue_lighter">
-
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical"
-                      android:paddingBottom="@dimen/confirmation_layout_padding_bottom"
-                      android:descendantFocusability="beforeDescendants"
-                      android:focusableInTouchMode="true">
-
-            <EditText
-                      android:id="@+id/power"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:inputType="numberDecimal"
-                      android:layout_marginStart="54dp"
-                      android:layout_marginEnd="54dp"
-                      android:layout_gravity="center"
-                      android:hint="!!!!"
-                      android:background="@drawable/rounded_shape"
-                      android:layout_marginTop="@dimen/confirmation_layout_padding_bottom" />
-
-        </LinearLayout>
-
-
     </ScrollView>
 </LinearLayout>
+
