--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -47,7 +47,7 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_view_hot_media"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp">
@@ -68,7 +68,7 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_view_top_songs"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp">
