--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -5,22 +5,23 @@
     android:background="@color/color_bottom_sheet_navigation_bar"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@color/color_vendor_dark_grey_blue_lighter"
-        android:elevation="4dp"
-        android:orientation="vertical">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view_new_media"
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp">
+            android:background="@color/color_vendor_dark_grey_blue_lighter"
+            android:elevation="4dp"
+            android:orientation="vertical">
 
-        </android.support.v7.widget.RecyclerView>
-    </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_new_media"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp">
+
+            </android.support.v7.widget.RecyclerView>
+        </android.support.v7.widget.CardView>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -54,6 +55,7 @@
 
                 </android.support.v7.widget.RecyclerView>
             </android.support.v7.widget.CardView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -75,6 +77,7 @@
 
                 </android.support.v7.widget.RecyclerView>
             </android.support.v7.widget.CardView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -96,6 +99,7 @@
 
                 </android.support.v7.widget.RecyclerView>
             </android.support.v7.widget.CardView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
